packable/packable-derive-test/tests/fail/invalid_field_type_verify_with.stderr
error[E0308]: mismatched types
  --> tests/fail/invalid_field_type_verify_with.rs:33:10
   |
33 | #[derive(Packable)]
   |          ^^^^^^^^
   |          |
   |          expected `u64`, found `u8`
   |          arguments to this function are incorrect
   |
   = note: expected reference `&u64`
              found reference `&u8`
note: function defined here
  --> tests/fail/invalid_field_type_verify_with.rs:25:4
   |
25 | fn verify_value<const VERIFY: bool>(&value: &u64) -> Result<(), PickyError> {
   |    ^^^^^^^^^^^^                     ------------
   = note: this error originates in the derive macro `Packable` (in Nightly builds, run with -Z macro-backtrace for more info)
